[3-앨범 리스트 셀 선택 시, 새로운 View push 기능] - didSelectRowAt 메소드 구현(push nextVC) - nextVC의 navigation bar title을 해당 cell의 앨범 제목으로 설정

--- a/AlbumApp/Resource/Base.lproj/Main.storyboard
+++ b/AlbumApp/Resource/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
         <!--Asset Collection View Controller-->
         <scene sceneID="XTu-s8-QvQ">
             <objects>
-                <collectionViewController id="Ems-En-9tK" customClass="AssetCollectionViewController" customModule="AlbumApp" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="assetCollectionVC" id="Ems-En-9tK" customClass="AssetCollectionViewController" customModule="AlbumApp" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="ZWb-BI-XHj">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
