--- a/AlbumApp/Resource/Base.lproj/Main.storyboard
+++ b/AlbumApp/Resource/Base.lproj/Main.storyboard
@@ -103,23 +103,18 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="BEq-kW-Jwg" customClass="AssetCollectionViewCell" customModule="AlbumApp" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="BEq-kW-Jwg" customClass="AssetCollectionViewCell" customModule="AlbumApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="MF0-zd-rzb">
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" insetsLayoutMarginsFromSafeArea="NO" id="MF0-zd-rzb">
                                     <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k6q-hB-dbZ">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k6q-hB-dbZ">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstItem="k6q-hB-dbZ" firstAttribute="leading" secondItem="MF0-zd-rzb" secondAttribute="leading" id="1DY-d1-Szc"/>
-                                        <constraint firstAttribute="bottom" secondItem="k6q-hB-dbZ" secondAttribute="bottom" id="Laj-gW-ECk"/>
-                                        <constraint firstItem="k6q-hB-dbZ" firstAttribute="top" secondItem="MF0-zd-rzb" secondAttribute="top" id="X1q-gA-Gpr"/>
-                                        <constraint firstAttribute="trailing" secondItem="k6q-hB-dbZ" secondAttribute="trailing" id="nth-jt-caX"/>
-                                    </constraints>
                                 </collectionViewCellContentView>
                                 <connections>
                                     <outlet property="thumbnailImage" destination="k6q-hB-dbZ" id="Mgs-Ye-bAx"/>
