--- a/AlbumApp/Resource/Base.lproj/Main.storyboard
+++ b/AlbumApp/Resource/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3ir-Pp-5ck">
-                                                    <rect key="frame" x="10" y="7.6666666666666643" width="70" height="70"/>
+                                                    <rect key="frame" x="10" y="9.3333333333333286" width="70" height="67"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="70" id="BQ6-ap-nTk"/>
                                                         <constraint firstAttribute="height" constant="70" id="MT7-RK-dVP"/>
@@ -96,7 +96,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="byg-ks-zyR">
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="byg-ks-zyR">
                             <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
